--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -52,6 +52,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    pointer-events: none; /* Para que as linhas não interfiram nos cliques */
 }
 
 /* Estilo para as fases */
