--- a/Level1/Unit4/style.css
+++ b/Level1/Unit4/style.css
@@ -43,6 +43,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    pointer-events: none;
 }
 
 /* Estilo para as fases */
@@ -132,6 +133,27 @@
 
 .path-purple {
     stroke: purple;
+}
+
+/* Curvas acentuadas */
+.path.curve {
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+@keyframes draw {
+    from {
+        stroke-dashoffset: 1000;
+    }
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
+.path {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    animation: draw 1.5s forwards;
 }
 
 /* Media Queries para telas menores */
