--- a/Level1/Unit4/style.css
+++ b/Level1/Unit4/style.css
@@ -84,8 +84,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 40px; /* Reduzido para 40px */
-    height: 40px;
+    width: 50px; /* Aumentado para 50px */
+    height: 50px;
     transform: translate(-50%, -50%);
     z-index: 10;
     opacity: 1 !important;
@@ -137,8 +137,8 @@
 
 /* Estilo para o gif de cadeado */
 .unlock-gif {
-    width: 40px; /* Ajustado para 40px */
-    height: 40px;
+    width: 50px; /* Ajustado para 50px */
+    height: 50px;
     z-index: 15;
 }
 
