--- a/Level1/Unit4/style.css
+++ b/Level1/Unit4/style.css
@@ -84,12 +84,12 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 50px; /* Aumentado para 50px */
+    width: 50px; /* Ajustado para 50px */
     height: 50px;
     transform: translate(-50%, -50%);
     z-index: 10;
+    filter: none !important;
     opacity: 1 !important;
-    filter: none; /* Mantendo as cores originais */
 }
 
 /* Animação de brilho crescente quando a fase é desbloqueada */
@@ -137,8 +137,8 @@
 
 /* Estilo para o gif de cadeado */
 .unlock-gif {
-    width: 50px; /* Ajustado para 50px */
-    height: 50px;
+    width: 60px; /* Ajustado para 60px */
+    height: 60px;
     z-index: 15;
 }
 
