--- a/Level1/Unit4/style.css
+++ b/Level1/Unit4/style.css
@@ -105,6 +105,14 @@
     opacity: 1;
 }
 
+/* Estilo para as linhas pontilhadas */
+.path-blue {
+    fill: none;
+    stroke: #0000FF;
+    stroke-width: 4;
+    stroke-dasharray: 10, 10; /* Linha pontilhada */
+}
+
 /* Media Queries para telas menores */
 @media (max-width: 600px) {
     .phase {
