--- a/Level1/Unit4/style.css
+++ b/Level1/Unit4/style.css
@@ -125,3 +125,23 @@
         height: 15vw;
     }
 }
+/* Estilo para o botão Back */
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    z-index: 30;  /* Certifique-se de que o botão fique sobre outros elementos */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s;
+}
+
+.back-button:hover {
+    background-color: #333;  /* Muda o fundo para cinza escuro ao passar o mouse */
+}
