--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -40,6 +40,15 @@ header h1 {
     font-family: 'Arial', sans-serif;
 }
 
+.subtitle {
+    font-size: 2.5rem; /* Mesmo tamanho do título */
+    color: #4CAF50; /* Mesma cor verde do título */
+    line-height: 1.2; /* Mesma altura de linha */
+    text-shadow: 2px 2px #888; /* Mesma sombra */
+    font-family: 'Arial', sans-serif; /* Mesma fonte */
+    margin-top: 30px; /* Adiciona espaçamento acima do subtítulo */
+}
+
 /* Estilo dos botões de nível */
 .levels {
     display: flex;
