--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,7 +42,7 @@ header h1 {
 
 .subtitle {
     font-size: 2.5rem; /* Mesmo tamanho do título */
-    color: #4CAF50; /* Mesma cor verde do título */
+    color: #4CAF50  !important; /* Mesma cor verde do título */
     line-height: 1.2; /* Mesma altura de linha */
     text-shadow: 2px 2px #888; /* Mesma sombra */
     font-family: 'Arial', sans-serif; /* Mesma fonte */
