--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,8 +44,8 @@ header h1 {
     font-size: 2.5rem; /* Mesmo tamanho do título */
     color: #4CAF50  !important; /* Mesma cor verde do título */
     line-height: 1.2; /* Mesma altura de linha */
-    text-shadow: 2px 2px #888; /* Mesma sombra */
-    font-family: 'Arial', sans-serif; /* Mesma fonte */
+    text-shadow: none; /* Mesma sombra */
+    font-family: 'Arial', sans-serif; 
     margin-top: 30px; /* Adiciona espaçamento acima do subtítulo */
 }
 
